1.16-3.0.5:
- Update to latest McJtyLib

1.16-3.0.4-beta:
- Update to latest McJtyLib

3.0.3-beta:
- Fixed a problem on servers

3.0.2-beta:
- Safer client-side registrations (thread-safety)
- Various cleanups and fixes

3.0.1-beta:
- Fixed a potential exploit which could be used to attack a server

3.0.0-beta:
- First port to 1.16.2

2.1.6:
- Fixed a potential exploit which could be used to attack a server

2.1.5-beta:
- Update for latest McJtyLib

2.1.4-beta:
- Update for latest McJtyLib

2.1.3-beta:
- Fixed the builder so it no longer voids items if there are no suitable storages

2.1.2-beta:
- The Builder can build in water again
- Fixed a problem with the energy level not showing in the shield projector GUI (it worked fine, it just didn't show)
- Fixed a potential crash with the shape card gui when it is openened from the Builder
- The shield will now also consider dolphins, bees, squids, and other neutral creatures as passive
- Some small protection fix
- Fixed a bug with the Builder where replacing a shape card would not trigger the recalculation of certain internal settings. This could cause settings like fortune or silk touch to be ignored
- Fixed a bug with the Builder where fortune wasn't working at all

2.1.1-beta:
- Dependency fix

2.1.0-beta:
- Fixed the Builder to cope better with 'unplacable' blocks. Everything is better compared to crashing.
- Better tooltips for items and blocks
- The 'oredict' support for voidable blocks in the shape card has been replaced with 'tag matching'
- The shapecard gui can open from within the gui of the Builder
- Fixed the recipes for the vanilla recipe book
- Moved most of the configs from common to server (so that they are saved with the world and synced to the client)

2.0.2-alpha:
- Michael Hillcox added some protection to the builder to prevent it from crashing in weird situations

2.0.1-alpha:
- Fixed a problem where the shield wasn't decomposed properly if the projector block was broken