@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed the shield projector no longer accepting power
+
 1.16-3.0.5:
 - Update to latest McJtyLib
 
